# mlxlab

./: .gitignore  README.md
ane-chat/: requirements.md
ane-host/: description.md
chat/: README.md  requirements.md  requirements.txt  setup.py
chat-mcp/: README.md  ai-eats-the-world.txt  config.json  mcp.json  mcp.json.example  requirements.md  requirements.txt  setup.py
chat-mcp/mcp_chat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
chat-mcp/mcpchat/: __init__.py  __main__.py  chat.py  mcp_client.py  model_loader.py
chat/llmchat/: __init__.py  __main__.py  chat.py  model_loader.py
chat/llmchat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
lab/: dl-model.sh  hfdownloader.sh  test.py  test2.py  train.sh
lab2/: load-model.py
llm-cli/:  output.txt  .env.example  README.md  config.json  config.json.example  mcp.json  mcp.json.example  output.txt  plan.md  requirements.md  requirements.txt  setup.py
llm-cli/llm_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
llm-cli/llmcli/: __init__.py  __main__.py  cli.py  config.py  model.py  output_writer.py  tool_executor.py
llm-cli/test/: config.json  test-prompt.txt
llm-host/: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  config.json  mcp.json  plan.md  pyvenv.cfg  requirements.md  requirements.txt  setup.py
llm-host/examples/: config.json.example  mcp.json.example
llm-server/: .llmserver_mcp.json  README.md  config.json  config.json.example  llmserver-requirements.md  mcp.json  pyvenv.cfg  requirements.txt  setup.py
local-ai/: local-ai.sln
mcp-host/: .env.example  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  PACKAGING.md  QUICKSTART.md  README.md  mcp.json  plan.md  pyproject.toml  pyvenv.cfg  requirements-dev.txt  requirements.md  requirements.txt  setup.py  test_env_loading.py
mcp-host/examples/: mcp.json  mcp.json.example  simple_host.py
mcp-host/mcp_host/: __init__.py  cache.py  config.py  exceptions.py  host.py  metrics.py  protocol.py  registry.py  router.py  server.py  types.py
mcp-host/mcp_host.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+49 files in other folders)
