[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-host"
version = "0.1.0"
description = "A Python module for hosting and managing MCP servers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jake Watkins", email = "jake@example.com"}
]
keywords = ["mcp", "model-context-protocol", "llm", "ai", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# No runtime dependencies - uses only Python stdlib
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
]

[project.urls]
Homepage = "https://github.com/jakewatkins/mcp-host"
Documentation = "https://github.com/jakewatkins/mcp-host#readme"
Repository = "https://github.com/jakewatkins/mcp-host"
Issues = "https://github.com/jakewatkins/mcp-host/issues"

[tool.setuptools]
packages = ["mcp_host"]

[tool.setuptools.package-data]
mcp_host = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=mcp_host --cov-report=term-missing"
